[project]
name = "phabricator-review"
version = "0.1.0"
description = "LLM-powered code review for Phabricator revisions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.scripts]
phabreview = "main.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]
